@@ -1,3 +1,8 @@
+2017-02-26  Albert Graef  <aggraef@gmail.com>
+
+	* pure.cc (main): Let --version report the git revision if we have
+	it.
+
 2017-02-24  Albert Graef  <aggraef@gmail.com>
 
 	* 0.65 release. (It's about time.)
